# wallet_store_backend

./: .env.example  .gitignore  README.md  main.py  progress.md  pyproject.toml
alembic/: env.py
alembic/versions/: 42848698c646_create_carts_and_cart_items_tables.py  512f1f82c32a_create_products_table.py  5dd335e57947_add_category_id_to_attribute_values_and_.py  7c0694eee7f1_create_payments_table.py  8376bdfa5dad_create_shipments_table.py  8c041cadf37a_create_users_table.py  a94396e7bb55_create_attributes_eav_tables.py  b9f4460e5009_create_orders_and_order_items_tables.py  e16bc5fb6fb2_update_price_cents_product_name_email_.py  fc3c94c4a0ae_create_categories_table_with_hierarchy.py
core/: config.py  logging_config.py
notes/: columns_vs_mapped_columns.md  create_tables.md  migration_commands.md
seeders/: __init__.py  attributes_seeder.py  base_seeder.py  category_seeder.py  run_seeders.py
src/: api.py
src/middleware/: image_upload.py
src/models/: __init__.py  attribute.py  cart.py  category.py  category_attribute.py  db.py  order.py  payment.py  product.py  shipment.py  user.py
src/models/helpers/: timestamp_mixin.py
src/routes/: models.py
src/routes/attributes/: attribute_service.py  controller.py  models.py  service.py
src/routes/categories/: benchmark_category_chain.py  controller.py  models.py  service.py
src/routes/products/: controller.py  models.py  service.py
src/routes/users/: controller.py  models.py  service.py
src/testing/: README.md
src/testing/benchmarks/categories/: benchmark_category_chain.py
